# 349Bot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain-mingw.cmake
.github/workflows/: cmake-single-platform.yml
src/: global.cpp  global.h  main.cpp  test.h
src/commands/: ping.cpp  ping.h  play.cpp  play.h  test.cpp  test.h
src/events/: autocomplete.cpp  autocomplete.h  commands.cpp  commands.h  messageCreate.cpp  messageCreate.h  slashcommandsCreate.cpp  slashcommandsCreate.h
src/lavacop/: lavacop.cpp  lavacop.h
src/lavacop/src/: lavalink.cpp  lavalink.h  player.cpp
src/lib/: embeds.h  format.cpp  log.cpp  log.h  math_utils.cppm  print.cpp  print.h
src/util/: decoration.cpp  decoration.h  device.cpp  device.h  register.cpp  register.h  skia.cpp  skia.h  textcommands.cpp  textcommands.h
test-lib/: cairo.cpp
